--- a/src/components/Test.astro
+++ b/src/components/Test.astro
@@ -2,12 +2,4 @@
 import { Card } from '@astrojs/starlight/components';
 ---
 
-<div data-tauri-disabled>
-  <Card title="Demo" icon="document">
-    <p>
-      You can download the Tauri Documentation app here: <a href="#"
-        >INSERT LINK</a
-      >
-    </p>
-  </Card>
-</div>
+<Card title="Demo">You're amazing Simon and HiDeoo 🎉</Card>
